🐛 fix modal overflow & select max height

--- a/src/components/Utils/Modal.module.scss
+++ b/src/components/Utils/Modal.module.scss
@@ -26,7 +26,6 @@
 
   main {
     flex: 1;
-    overflow: auto;
     overscroll-behavior: contain;
     background: var(--color-white);
     border: 3px solid var(--color-black);
